--- a/client/partials/lists.html
+++ b/client/partials/lists.html
@@ -1,11 +1,11 @@
 <table style="width:100%">
       <tr>
         <td style="width:50%">
-            <a href="/#/list"><h2 id="myList">my list</h2></a>
+            <a href="/#/list"><h2>my list</h2></a>
         </td>
         <td style="width:50%">
             <a href="/#/recommended">
-              <h2 id="recommeded">recommended</h2>
+              <h2>recommended</h2>
             </a>
         </td>
       </tr>
