--- a/client/css/login.css
+++ b/client/css/login.css
@@ -3,7 +3,7 @@
     padding: 20px;
     background: #fff;
     border-radius: 5px;
-    border-top: 5px solid #ff656c;
+    border-top: 5px solid #088A68;
     margin: 0 auto;
 }
 
@@ -50,16 +50,16 @@
 }*/
 
 .login-block input:active, .login-block input:focus {
-    border: 1px solid #ff656c;
+    border: 1px solid #088A68;
 }
 
 .login-block button {
     width: 100%;
     height: 40px;
-    background: #ff656c;
+    background: #088A68;
     box-sizing: border-box;
     border-radius: 5px;
-    border: 1px solid #e15960;
+    border: 1px solid #0B3B2E;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
@@ -70,5 +70,5 @@
 }
 
 .login-block button:hover {
-    background: #ff7b81;
+    background: #7C92CF;
 }
