--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -26,7 +26,9 @@
     </div>
 
     <div>
+      <a href="/#/list">
       <button type="submit" class="btn btn-default" ng-disabled="disabled">Login</button>
+      </a>
     </div>
 
   </form>
