successfully scraped craigslist

--- a/client/partials/recommended.html
+++ b/client/partials/recommended.html
@@ -5,7 +5,7 @@
 </div>
 <!--END ROW 2/ LISTS-->
 
-<table style="width:100%">
+<!-- <table style="width:100%">
     <tr>
         <td style="width:65%">
             <p>
@@ -29,4 +29,7 @@
         </td>
     </tr>
 </table>
+
 </div>
+ -->
+<div id="content"></div>
