--- a/client/partials/header.html
+++ b/client/partials/header.html
@@ -28,12 +28,37 @@
 
 
 <!--HOVER OVER MENU ICON-->
-<menuDropDown id="menuDropDown">
+<!-- <menuDropDown id="menuDropDown">
 <ul class="dropdown-menu" role="menu" aria-labellededby="dropdownMenu">
     <li><a tabindex="-1" href="#">Regular link</a></li>
     <li><a tabindex="-1" href="#">Regular link</a></li>
     <li><a tabindex="-1" href="#">Regular link</a></li>
   </ul>
+</menuDropDown> -->
+<!--HOVER OVER MENU ICON-->
+
+<!--HOVER OVER MENU ICON-->
+<menuDropDown id="menuDropDown">
+<div class="menu-wrap">
+    <nav class="menu">
+        <ul class="clearfix">
+            <li><a href="#"></a></li>
+            <li>
+                <a href="#"><nav-bar>
+                <!-- <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50" id="menuIcon2"/> -->
+            </nav-bar></a>
+
+                <ul class="sub-menu">
+                    <li><a href="#/login">Login</a></li>
+                    <li><a href="#/register">Register</a></li>
+                    <li><a href="#/search">Search</a></li>
+                    <li><a href="#/list">My List</a></li>
+                    <li><a href="#/recommended">Feed</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+</div>
 </menuDropDown>
 <!--HOVER OVER MENU ICON-->
 
