--- a/client/partials/header2.html
+++ b/client/partials/header2.html
@@ -48,13 +48,13 @@
 
 
 <!--HOVER OVER MENU ICON-->
-<menuDropDown id="menuDropDown2">
+<!-- <menuDropDown id="menuDropDown2">
 <ul class="dropdown-menu" role="menu" aria-labellededby="dropdownMenu">
     <li><a tabindex="-1" href="#">Regular link</a></li>
     <li><a tabindex="-1" href="#">Regular link</a></li>
     <li><a tabindex="-1" href="#">Regular link</a></li>
   </ul>
-</menuDropDown>
+</menuDropDown> -->
 <!--HOVER OVER MENU ICON-->
 
 </div>
