--- a/client/partials/lists.html
+++ b/client/partials/lists.html
@@ -1,12 +1,18 @@
+
+<div id="row2">
+
+
 <table style="width:100%">
       <tr>
         <td style="width:50%">
-            <a href="/#/list"><h2>my list</h2></a>
+            <a href="/#/list"><h2>my list{{msg}}</h2></a>
         </td>
         <td style="width:50%">
-            <a href="/#/recommended">
+            <a href="/#/recommended" ng-click='go()'>
               <h2>recommended</h2>
             </a>
         </td>
       </tr>
 </table>
+
+</div>
