--- a/client/partials/myList.html
+++ b/client/partials/myList.html
@@ -3,9 +3,7 @@
 <div ng-include="'partials/header2.html'"></div>
 
 <!--ROW 2/ LISTS-->
-<div id="row2">
-  <lists></lists>
-</div>
+<div ng-include="'partials/lists.html'"></div>
 <!--END ROW 2/ LISTS-->
 
 <!--URL ADD INPUT-->
@@ -27,16 +25,50 @@
 </table>
 <!--END URL ADD INPUT-->
 
-<table style="width:100%" id="mylist">
+
+<table style="width:100%">
+
     <tr ng-repeat="url in allUrls | filter:searchList" class="url">
         <td style="width:30%">
             <img ng-src="{{urlimage}}" alt="Menu Icon" height="100%" width="100%" style="padding-top:20px;" />
         </td>
         <td>
-            <p><h3>{{url}}</h3></p>
-            {{fillerText}}
+            <p><a href="{{url}}"><h3>Click here to view job!</h3></a></p>
+            <span style='paddding-right:35px;'>{{fillerText}}</span>
         </td>
     </tr>
+
+
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" width="100%" style="padding: 20px;" />
+        </td>
+        <td>
+            <p><a href="https://denver.craigslist.org/sof/5256091198.html"><h3>{{headline}}</h3></a></p>
+            <span style='paddding-right:35px;'>{{fillerText}}</span>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="width:30%">
+            <img ng-src="./images/job_3.png" alt="Menu Icon" width="100%" style="padding: 20px;" />
+        </td>
+        <td>
+            <p><a href="https://denver.craigslist.org/sof/5258810603.html"><h3>Lead Customer Support Engineer (Englewood, CO)</h3></a></p>
+            <span style='paddding-right:35px;'>Lead Customer Support Engineer Digabit™ is a hot Denver software startup and a great place to work: top-talent teams, a compelling SAAS product, leading-edge technology, and major clients in the U.S. and Europe. Our founders are software veterans with previous successful ventures and products.We've had a very strong first half in 2015 and we are on target to double the size of our company in the next 12 months.</span>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="width:30%">
+            <img ng-src="./images/job_2.png" alt="Menu Icon" width="100%" style="padding: 20px;" />
+        </td>
+        <td>
+            <p><a href="https://denver.craigslist.org/sof/5255180948.html"><h3>Sr./Lead Front End Javascript MVC Engineer (San Francisco)</h3></a></p>
+            <span style='paddding-right:35px;'>This is an opportunity to move to tech mecca, San Francisco, CA. Working remotely is not an option. At Brightidea, we believe in People Powered Innovation. Our mission is to maximize the creative potential of all of the world's people. We believe in challenging the status quo, thinking out of the box, INNOVATING and helping our clients develop a compelling future using their existing resources. </span>
+        </td>
+    </tr>
+
 </table>
 
 </div>
