--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,26 +1,9 @@
 body {
+    background-image: url("");
     background: no-repeat fixed center center;
     background-size: cover;
     font-family: Montserrat;
 }
-/*
-body {
-  background: white;
-  margin: 10px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}*/
-
-.red {
-    color: red;
-}
-.blue {
-    color: blue;
-}
-.green {
-    color: green;
-}
-
-
 
 a {
   text-decoration: none !important;
@@ -127,7 +110,7 @@ ul {
   margin-top: -113px;
   margin-left: 25px;
   width: 80%;
-  z-index: 3;
+  z-index: 7;
 }
 
 #urlBar {
@@ -160,7 +143,6 @@ ul {
 
 #menuDropDown {
   position: fixed;
-  margin-top: 150px;
   z-index: 6;
 }
 
@@ -170,8 +152,12 @@ ul {
 }
 
 #searchOptions {
-  margin: auto;
-  margin-right: 30%;
+  min-width: 350px;
+  max-width: 400px;
+  background-color: white;
+  padding: 10px;
+  box-shadow:0px 4px 6px rgba(0,0,0,0.6);
+  border-radius: 25px
 }
 
 /*buttons for option page*/
