--- a/client/partials/headerAuth.html
+++ b/client/partials/headerAuth.html
@@ -28,13 +28,13 @@
 
 
 <!--HOVER OVER MENU ICON-->
-<menuDropDown id="menuDropDown">
+<!-- <menuDropDown id="menuDropDown">
 <ul class="dropdown-menu" role="menu" aria-labellededby="dropdownMenu">
     <li><a tabindex="-1" href="#">Regular link</a></li>
     <li><a tabindex="-1" href="#">Regular link</a></li>
     <li><a tabindex="-1" href="#">Regular link</a></li>
   </ul>
-</menuDropDown>
+</menuDropDown> -->
 <!--HOVER OVER MENU ICON-->
 
 </div>
