--- a/client/partials/recommended.html
+++ b/client/partials/recommended.html
@@ -1,35 +1,20 @@
 <div>
-<!--ROW 2/ LISTS-->
-<div id="row2">
-  <lists></lists>
-</div>
-<!--END ROW 2/ LISTS-->
-
-<!-- <table style="width:100%">
-    <tr>
-        <td style="width:65%">
-            <p>
-            <h3>First Recommended one</h3></p>
-
-            {{fillerText}}
-        </td>
-        <td>
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="150px" style="padding-top:20px;"/>
-        </td>
-    </tr>
+    <div ng-include="'partials/header2.html'"></div>
+    <!--ROW 2/ LISTS-->
+    <div ng-include="'partials/lists.html'"></div>
+    <!--END ROW 2/ LISTS-->
+    <!-- <table style="width:100%">
         <tr>
-        <td>
-            <p>
-            <h3>{{headline}}</h3></p>
-
-            {{fillerText}}
-        </td>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="150px" style="padding-top:20px"/>
-        </td>
-    </tr>
-</table>
-
+            <td style="width:65%">
+                <p>
+                <h3>First Recommended one</h3></p>
+                {{fillerText}}
+            </td>
+            <td>
+                <img ng-src="{{urlImage}}" alt="Menu Icon" height="150px" style="padding-top:20px;"/>
+            </td>
+        </tr>
+    </table>
+    -->
+    <div id="content"></div>
 </div>
- -->
-<div id="content"></div>
