login logout works and menu directories are working

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -143,7 +143,12 @@ ul {
 
 #menuDropDown {
   position: fixed;
-  z-index: 6;
+  z-index: 5;
+}
+
+#menuDropDown2 {
+  position: fixed;
+  z-index: 7;
 }
 
 #addAvoid {
