--- a/client/partials/header2.html
+++ b/client/partials/header2.html
@@ -22,7 +22,7 @@
         </td>
         <td style="width:10%">
         <!--NAV BAR-->
-            <nav-bar>
+            <nav-bar ng-mouseover="menu2=true">
                 <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50" id="menuIcon2"/>
             </nav-bar>
         <!--END NAV BAR-->
@@ -46,6 +46,30 @@
 </searchBar>
 <!--HOVER OVER SEARCH ICON-->
 
+
+<!--HOVER OVER MENU ICON-->
+<menuDropDown id="menuDropDown2" ng-show="menu2">
+<div class="menu-wrap">
+    <nav class="menu">
+        <ul class="clearfix">
+            <li><a href="#"></a></li>
+            <li>
+                <a href="#"><nav-bar>
+                <!-- <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50" id="menuIcon2"/> -->
+            </nav-bar></a>
+
+                <ul class="sub-menu">
+                    <li ng-click="logout()"><a>Logout</a></li>
+                    <li><a href="#/search">Search</a></li>
+                    <li><a href="#/list">My List</a></li>
+                    <li><a href="#/recommended">Feed</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+</div>
+</menuDropDown>
+<!--HOVER OVER MENU ICON-->
 
 <!--HOVER OVER MENU ICON-->
 <!-- <menuDropDown id="menuDropDown2">
