--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -13,7 +13,7 @@
 
   <h2>Welcome to Job Pocket!</h2>
 
-  <div ng-show="error" class="alert alert-danger"></div>
+  <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
 
   <form class="form" ng-submit="login()">
 
