--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -4,7 +4,7 @@
 
     <h2>Welcome to Job Pocket!</h2>
 
-    <div ng-show="error" class="alert alert-danger"></div>
+    <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
 
     <form class="form" ng-submit="register()">
 
