--- a/client/partials/myList.html
+++ b/client/partials/myList.html
@@ -28,7 +28,7 @@
 
 <table style="width:100%">
 
-    <tr ng-repeat="url in allUrls | filter:searchList" class="url">
+    <tr ng-repeat="url in allUrls | filter:url" class="url">
         <td style="width:30%">
             <img ng-src="{{urlimage}}" alt="Menu Icon" height="100%" width="100%" style="padding-top:20px;" />
         </td>
