--- a/client/partials/header2.html
+++ b/client/partials/header2.html
@@ -22,7 +22,7 @@
         </td>
         <td style="width:10%">
         <!--NAV BAR-->
-            <nav-bar ng-mouseover="menu2=true">
+            <nav-bar>
                 <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50" id="menuIcon2"/>
             </nav-bar>
         <!--END NAV BAR-->
@@ -48,7 +48,7 @@
 
 
 <!--HOVER OVER MENU ICON-->
-<menuDropDown id="menuDropDown2" ng-show="menu2">
+<menuDropDown id="menuDropDown2" ng-controller="logoutController">
 <div class="menu-wrap">
     <nav class="menu">
         <ul class="clearfix">
@@ -59,7 +59,7 @@
             </nav-bar></a>
 
                 <ul class="sub-menu">
-                    <li ng-click="logout()"><a>Logout</a></li>
+                    <li ng-click="logout()"><a href="#/login">Logout</a></li>
                     <li><a href="#/search">Search</a></li>
                     <li><a href="#/list">My List</a></li>
                     <li><a href="#/recommended">Feed</a></li>
