--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -6,7 +6,7 @@
     <input type="text" value="" placeholder="Username" id="username" />
     <input type="password" value="" placeholder="Password" id="password" />
     <button>Submit</button>
-</div>
+</div>jew
  -->
 
 <div class="login-block" id="loginPage">
