--- a/client/partials/header.html
+++ b/client/partials/header.html
@@ -7,7 +7,7 @@
         <td style="width:90%">
         <!--LOGO-->
             <logo>
-                <a href="/#/login">
+                <a href="">
                   <h1 id="logoMain">{{logo}}</h1>
                 </a>
             </logo>
