--- a/client/partials/header2.html
+++ b/client/partials/header2.html
@@ -14,7 +14,7 @@
         <td style="width:80%">
         <!--LOGO-->
             <logo>
-                <a href="/#/login">
+                <a href="">
                   <h1 id="logo">{{logo}}</h1>
                 </a>
             </logo>
