updated recommended section to load when click on that section

--- a/client/partials/header.html
+++ b/client/partials/header.html
@@ -28,25 +28,12 @@
 
 
 <!--HOVER OVER MENU ICON-->
-<!-- <menuDropDown id="menuDropDown">
-<ul class="dropdown-menu" role="menu" aria-labellededby="dropdownMenu">
-    <li><a tabindex="-1" href="#">Regular link</a></li>
-    <li><a tabindex="-1" href="#">Regular link</a></li>
-    <li><a tabindex="-1" href="#">Regular link</a></li>
-  </ul>
-</menuDropDown> -->
-<!--HOVER OVER MENU ICON-->
-
-<!--HOVER OVER MENU ICON-->
 <menuDropDown id="menuDropDown" ng-controller="logoutController">
 <div class="menu-wrap">
     <nav class="menu">
         <ul class="clearfix">
             <li><a href="#"></a></li>
-            <li>
-                <a href="#"><nav-bar>
-                <!-- <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50" id="menuIcon2"/> -->
-            </nav-bar></a>
+            <li><a href="#"><nav-bar></nav-bar></a>
 
                 <ul class="sub-menu">
                     <li><a href="#/login">Login</a></li>
