--- a/client/partials/header2.html
+++ b/client/partials/header2.html
@@ -54,10 +54,7 @@
         <ul class="clearfix">
             <li><a href="#"></a></li>
             <li>
-                <a href="#"><nav-bar>
-                <!-- <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50" id="menuIcon2"/> -->
-            </nav-bar></a>
-
+                <a href="#"><nav-bar></nav-bar></a>
                 <ul class="sub-menu">
                     <li ng-click="logout()"><a href="#/login">Logout</a></li>
                     <li><a href="#/search">Search</a></li>
@@ -69,16 +66,7 @@
     </nav>
 </div>
 </menuDropDown>
-<!--HOVER OVER MENU ICON-->
+<!--END HOVER OVER MENU ICON-->
 
-<!--HOVER OVER MENU ICON-->
-<!-- <menuDropDown id="menuDropDown2">
-<ul class="dropdown-menu" role="menu" aria-labellededby="dropdownMenu">
-    <li><a tabindex="-1" href="#">Regular link</a></li>
-    <li><a tabindex="-1" href="#">Regular link</a></li>
-    <li><a tabindex="-1" href="#">Regular link</a></li>
-  </ul>
-</menuDropDown> -->
-<!--HOVER OVER MENU ICON-->
 
 </div>
