--- a/client/partials/lists.html
+++ b/client/partials/lists.html
@@ -7,7 +7,7 @@
             <a href="/#/list"><h2>my list{{msg}}</h2></a>
         </td>
         <td style="width:50%">
-            <a href="/#/recommended" ng-click='go()'>
+            <a href="/#/recommended" ng-click='loadfeed("http://denver.craigslist.org/search/sof?format=rss")'>
               <h2>recommended</h2>
             </a>
         </td>
