--- a/client/css/menu.css
+++ b/client/css/menu.css
@@ -1,22 +1,8 @@
-/*.clearfix:after {
-    display:block;
-    clear:both;
-}*/
-
 /*----- Menu Outline -----*/
 .menu-wrap {
     text-align: right;
 }
 
-/*.menu {
-    width: 10%;
-    margin:0px auto;
-}*/
-
-/*.menu li {
-    margin:0px;
-    list-style:none;
-}
 */
 .menu a {
     transition:all linear 0.15s;
@@ -47,9 +33,7 @@
     text-shadow:0px 1px 0px rgba(0,0,0,0.4);
 }
 
-.menu > ul > li:hover > a, .menu > ul > .current-item > a {
-/*    background:#2e2728;*/
-}
+.menu > ul > li:hover > a, .menu > ul > .current-item
 
 /*----- Bottom Level -----*/
 .menu li:hover .sub-menu {
