--- a/client/css/login.css
+++ b/client/css/login.css
@@ -64,7 +64,7 @@
     font-weight: bold;
     text-transform: uppercase;
     font-size: 14px;
-    font-family: Montserrat;
+    font-family: 'Montserrat';
     outline: none;
     cursor: pointer;
 }
