--- a/client/partials/header2.html
+++ b/client/partials/header2.html
@@ -59,7 +59,7 @@
                     <li ng-click="logout()"><a href="#/login">Logout</a></li>
                     <li><a href="#/search">Search</a></li>
                     <li><a href="#/list">My List</a></li>
-                    <li><a href="#/recommended" ng-click='loadfeed("http://denver.craigslist.org/search/sof?format=rss")'>Feed</a></li>
+                    <li><a href="#/recommended" ng-click='loadfeed("https://denver.craigslist.org/search/sof?format=rss")'>Feed</a></li>
                 </ul>
             </li>
         </ul>
