--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,4 +1,4 @@
-<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 <div class="login-block" id="loginPage">
 
